# writeup2md

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  START_CLAUDE_CODE.md  pyproject.toml
docs/: 00_PRODUCT_SPEC.md  01_ARCHITECTURE.md  02_DATA_CONTRACTS.md  03_OCR_CODE_ENRICHMENT.md  04_CLI_SPEC.md  05_STREAMLIT_UI_SPEC.md  06_QUALITY_AND_TESTING.md  07_IMPLEMENTATION_ROADMAP.md  08_MACBOOK_EXECUTION.md  09_REAL_OCR_SETUP.md  10_GOLDEN_SET_EVALUATION.md  11_CAPTURE_COMPLETENESS.md  12_CODE_AWARE_OCR.md  13_RESUME_FRESHNESS.md  14_REVIEW_WORKFLOW.md
examples/: config.macbook.yaml  config.strict.yaml  sources.jsonl
reports/: E2E_BASELINE_DEFECTS.jsonl  E2E_BASELINE_DEFECTS.md  E2E_BASELINE_RESULTS.json  E2E_BASELINE_RESULTS.md  E2E_RELEASE_RESULTS.json  E2E_RELEASE_RESULTS.md  E2E_TEST_SAMPLES_RELEASE_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FULL_BOOK_212_MANUAL_REVIEW.md  FULL_BOOK_PERFORMANCE.jsonl  FULL_BOOK_PERFORMANCE.md  GOLDEN_SET_METRICS.json  GOLDEN_SET_METRICS.md  GOLDEN_SET_SCHEMA.md  HEADER_FOOTER_CROSS_PAGE_OPTIMIZATION.md  OCR_ERROR_TAXONOMY.md  PADDLEOCR_VL_BASELINE.md  PADDLEOCR_VL_GOLDEN_EVAL.md  PADDLEOCR_VL_IDENTITY.json  PADDLEOCR_VL_INTEGRATION.md  PADDLEOCR_VL_MACBOOK_PERF.md  PADDLEOCR_VL_TEST_PLAN.md  PADDLEOCR_VL_VS_RAPID.md  PROJECT_STATE.md  ROUND_2_BASELINE_AUDIT.md  ROUND_2_RELEASE_REPORT.md  TASK_01_COMPLETION.md  TASK_02_COMPLETION.md  TASK_03_COMPLETION.md  TASK_04_COMPLETION.md  TASK_05_COMPLETION.md  TASK_06_COMPLETION.md  TASK_07_COMPLETION.md  TASK_08_COMPLETION.md  TASK_09_COMPLETION.md  TASK_10_COMPLETION.md  TASK_11_COMPLETION.md  TASK_12_COMPLETION.md  TASK_13_COMPLETION.md  TASK_14_COMPLETION.md  (+17 more)
scripts/: inventory_test_samples.py  run_e2e_baseline.py  run_e2e_release.py  setup_paddleocr_vl_macos.sh
tasks/: TASK_01_FOUNDATION.md  TASK_02_URL_PIPELINE.md  TASK_03_PDF_PIPELINE.md  TASK_04_OCR_ENRICHMENT.md  TASK_05_BATCH_AND_QUALITY.md  TASK_06_STREAMLIT_UI.md  TASK_07_RELEASE_ACCEPTANCE.md  TASK_08_REAL_OCR_BACKEND.md  TASK_09_GOLDEN_SET.md  TASK_10_CAPTURE_COMPLETENESS.md  TASK_11_CODE_AWARE_OCR.md  TASK_12_RESUME_FRESHNESS.md  TASK_13_STREAMLIT_REVIEW_WORKFLOW.md  TASK_14_REAL_SOURCE_RELEASE.md  TASK_15_PADDLEOCR_VL_INTEGRATION.md  TASK_16_TEST_SAMPLE_BASELINE.md  TASK_17_VISUAL_RECOVERY.md  TASK_18_MARKDOWN_DOCUMENT_COMPILER.md  TASK_19_COMPLETENESS_AND_DOCUMENT_MODE.md  TASK_20_ONE_COMMAND_CLI_AND_PERFORMANCE.md  TASK_21_TEST_SAMPLES_RELEASE_ACCEPTANCE.md  TASK_22_PAGE_CHECKPOINTING.md  TASK_23_LONG_DOCUMENT_RUNTIME.md  TASK_24_CROSS_PAGE_RECONSTRUCTION.md  TASK_25_FULL_DOCUMENT_COMPLETENESS.md  TASK_26_OPTIONAL_GENERAL_VLM.md  (+3 more)
tests/: conftest.py
(+157 files in other folders)
